Remove default scope [Jekyll 3.0]

--- a/_posts/en/pages/2014-08-24-about.md
+++ b/_posts/en/pages/2014-08-24-about.md
@@ -1,5 +1,8 @@
 ---
 title: About
+type: pages
+lang: en
+desc: "Personnal website mostly about programming in Python, Ruby, TeX, R..."
 ---
 
 ## Colophon
