--- a/_posts/en/pages/2014-08-31-index.md
+++ b/_posts/en/pages/2014-08-31-index.md
@@ -1,6 +1,9 @@
 ---
 title: Articles
 permalink: /
+type: pages
+lang: en
+desc: "Personnal website mostly about programming in Python, Ruby, TeX, R..."
 ---
 
 {% include list.html %}
