--- a/_posts/en/pages/2014-09-13-404.md
+++ b/_posts/en/pages/2014-09-13-404.md
@@ -1,6 +1,9 @@
 ---
 title: Whoops!
 permalink: /404.html
+type: pages
+lang: en
+desc: "Personnal website mostly about programming in Python, Ruby, TeX, R..."
 ---
 
 ~
