--- a/_posts/fr/pages/2014-09-13-404.md
+++ b/_posts/fr/pages/2014-09-13-404.md
@@ -1,5 +1,8 @@
 ---
 title: Oups !
+type: pages
+lang: fr
+desc: "Site personnel traitant essentiellement de programmation en Python, Ruby, TeX, R..."
 ---
 
 ~
