--- a/_posts/fr/pages/2014-08-24-a-propos.md
+++ b/_posts/fr/pages/2014-08-24-a-propos.md
@@ -1,5 +1,8 @@
 ---
 title: À propos
+type: pages
+lang: fr
+desc: "Site personnel traitant essentiellement de programmation en Python, Ruby, TeX, R..."
 ---
 
 ## Colophon
