--- a/_posts/fr/pages/2014-08-31-journal.md
+++ b/_posts/fr/pages/2014-08-31-journal.md
@@ -1,5 +1,8 @@
 ---
 title: Articles
+type: pages
+lang: fr
+desc: "Site personnel traitant essentiellement de programmation en Python, Ruby, TeX, R..."
 ---
 
 {% include list.html %}
