--- a/_posts/en/pages/2014-08-24-about.md
+++ b/_posts/en/pages/2014-08-24-about.md
@@ -10,7 +10,7 @@ This website is entirely [static](https://en.wikipedia.org/wiki/Static_web_page)
 
 The pages are produced with the static website generator [Jekyll](http://jekyllrb.com/). The website is then hosted and served thanks to [GitHub Pages](https://pages.github.com/).
 
-Each page header is illustrated with a part from the ["Turgot" map of Paris](https://en.wikipedia.org/wiki/Turgot_map_of_Paris), created in the 18^(th) century by Louis Bretez.
+Each page header is illustrated with a part from the ["Turgot" map of Paris](https://en.wikipedia.org/wiki/Turgot_map_of_Paris), created in the 18<sup>th</sup> century by Louis Bretez.
 
 ## License
 The [source code](https://github.com/sylvaindurand/sylvaindurand.org) is freely available on [GitHub](https://github.com/sylvaindurand/sylvaindurand.org). The design isn't reusable; however, other content and codes presented on this website published under the [MIT license](http://opensource.org/licenses/MIT).
