--- a/_posts/fr/pages/2014-08-24-a-propos.md
+++ b/_posts/fr/pages/2014-08-24-a-propos.md
@@ -10,7 +10,7 @@ Ce site est entièrement [statique](https://fr.wikipedia.org/wiki/Page_web_stati
 
 Les pages sont produites à l'aide du générateur de sites statiques [Jekyll](http://jekyllrb.com/). Le site est ensuite généré puis servi grâce à [GitHub Pages](https://pages.github.com/).
 
-L'en-tête de chaque page est illustrée par une partie du [plan de Paris dit "de Turgot"](https://fr.wikipedia.org/wiki/Plan_de_Turgot), réalisé au XVIII^e siècle par [Louis Bretez](https://fr.wikipedia.org/wiki/Louis_Bretez).
+L'en-tête de chaque page est illustrée par une partie du [plan de Paris dit "de Turgot"](https://fr.wikipedia.org/wiki/Plan_de_Turgot), réalisé au XVIII<sup>e</sup> siècle par [Louis Bretez](https://fr.wikipedia.org/wiki/Louis_Bretez).
 
 ## Licence
 L'intégralité du [code source](https://github.com/sylvaindurand/sylvaindurand.org) est librement accessible sur [GitHub](https://github.com/sylvaindurand/sylvaindurand.org). Le thème graphique n'est pas réutilisable ; en revanche, le contenu et les codes présentés sur ce site sont publiés sous [licence MIT](http://opensource.org/licenses/MIT).
