--- a/_posts/en/pages/2014-08-24-about.md
+++ b/_posts/en/pages/2014-08-24-about.md
@@ -5,6 +5,8 @@ lang: en
 desc: "Personnal website mostly about programming in Python, Ruby, TeX, R..."
 ---
 
+Oliver
+
 ## Colophon
 This website is entirely [static](https://en.wikipedia.org/wiki/Static_web_page): it works only with HTML and CSS, and does not use any dynamic language. Particular attention is paid to [typography](http://webtypography.net/) and to [vertical rhythm](http://webtypography.net/2.2.2).
 
